apps/js-app/overlays/prd/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prd
    external-dns.alpha.kubernetes.io/hostname: js-app.dominio.com.br
spec:
  rules:
    - host: js-app.dominio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: js-app
                port:
                  number: 80
  tls:
    - hosts:
        - js-app.dominio.com.br
      secretName: js-app-letsencrypt-secret
